fixed the apps-alignment

--- a/styles/style.css
+++ b/styles/style.css
@@ -130,4 +130,5 @@ footer nav ul.right-links{
   word-wrap: normal;
   white-space: nowrap;
   direction: ltr;
+  vertical-align: middle;
 }
